[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "taskchampion"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.113"
taskchampion = { path = "../taskchampion" }
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
anyhow = "1.0"

[build-dependencies]
cbindgen = "0.20.0"
