[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
name = "taskchampion"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.113"
chrono = "^0.4.10"
taskchampion = { path = "../taskchampion" }
uuid = { version = "^0.8.2", features = ["v4"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
cbindgen = "0.20.0"
