bin_PROGRAMS = task
task_SHORTNAME = t
task_SOURCES = API.cpp Att.cpp Cmd.cpp Color.cpp Config.cpp Context.cpp       \
               Date.cpp Directory.cpp Duration.cpp File.cpp Filter.cpp        \
               Grid.cpp Hooks.cpp Keymap.cpp Location.cpp Nibbler.cpp         \
               Path.cpp Permission.cpp Record.cpp Sequence.cpp                \
               StringTable.cpp Subst.cpp TDB.cpp Table.cpp Task.cpp           \
               Taskmod.cpp Timer.cpp command.cpp custom.cpp dependency.cpp    \
               edit.cpp export.cpp import.cpp interactive.cpp main.cpp        \
               recur.cpp report.cpp rules.cpp rx.cpp text.cpp util.cpp        \
               API.h Att.h Cmd.h Color.h Config.h Context.h Date.h            \
               Directory.h Duration.h File.h Filter.h Grid.h Hooks.h Keymap.h \
               Location.h Nibbler.h Path.h Permission.h Record.h Sequence.h   \
               StringTable.h Subst.h TDB.h Table.h Task.h Taskmod.h Timer.h   \
               i18n.h main.h text.h util.h rx.h
task_CPPFLAGS=$(LUA_CFLAGS)
task_LDFLAGS=$(LUA_LFLAGS)
