[package]
name = "taskchampion-sync-server"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
failure = "0.1.8"
taskchampion = { path = "../taskchampion" }
futures = "0.3.8"

[dev-dependencies]
actix-rt = "1.1.1"
