[package]
name = "taskchampion-sync-server"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
actix-web = "^3.3.0"
failure = "^0.1.8"
futures = "^0.3.8"
serde = "^1.0.104"
kv = {version = "^0.10.0", features = ["msgpack-value"]}
clap = "^2.33.0"

[dev-dependencies]
actix-rt = "^1.1.1"
tempdir = "^0.3.7"
