[package]
name = "taskchampion-sync-server"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
actix-web = "^3.3.2"
anyhow = "1.0"
thiserror = "1.0"
futures = "^0.3.8"
serde = "^1.0.125"
serde_json = "^1.0"
clap = "^2.33.0"
log = "^0.4.14"
env_logger = "^0.8.3"
rusqlite = { version = "0.25", features = ["bundled"] }

[dev-dependencies]
actix-rt = "^1.1.1"
tempfile = "3"
