[package]
name = "taskchampion"
version = "0.2.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://djmitche.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/djmitche/taskchampion"
readme = "../README.md"
license = "MIT"
edition = "2018"

[dependencies]
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
serde = "^1.0.104"
serde_json = "^1.0"
chrono = { version = "^0.4.10", features = ["serde"] }
failure = {version = "^0.1.5", features = ["derive"] }
kv = {version = "^0.10.0", features = ["msgpack-value"]}
lmdb-rkv = {version = "^0.12.3"}
ureq = "^1.5.2"
log = "^0.4.11"
tindercrypt = { version = "^0.2.2", default-features = false }

[dev-dependencies]
proptest = "^0.9.4"
tempdir = "^0.3.7"
