[package]
name = "taskchampion"
version = "0.3.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
description = "Personal task-tracking"
homepage = "https://taskchampion.github.io/taskchampion/"
documentation = "https://docs.rs/crate/taskchampion"
repository = "https://github.com/taskchampion/taskchampion"
readme = "../README.md"
license = "MIT"
edition = "2018"

[dependencies]
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
serde = "^1.0.125"
serde_json = "^1.0"
chrono = { version = "^0.4.10", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ureq = "^2.1.0"
log = "^0.4.14"
tindercrypt = { version = "^0.2.2", default-features = false }
rusqlite = { version = "0.25", features = ["bundled"] }

[dev-dependencies]
proptest = "^1.0.0"
tempfile = "3"
