[package]
name = "integration-tests"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
taskchampion = { path = "../taskchampion" }
taskchampion-lib = { path = "../lib" }
taskchampion-sync-server = { path = "../sync-server" }

[dev-dependencies]
anyhow = "1.0"
actix-web = "^3.3.2"
actix-rt = "^1.1.1"
tempfile = "3"
pretty_assertions = "1"
log = "^0.4.17"
env_logger = "^0.9.0"
lazy_static = "1"

[build-dependencies]
cc = "1.0.73"
