[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2018"

[lib]
# staticlib is used for integration-tests, and is not exported.
crate-type = ["cdylib", "lib"]

[dependencies]
libc = "0.2.126"
taskchampion = { path = "../taskchampion" }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1"
